--- a/resources/css/components/index.css
+++ b/resources/css/components/index.css
@@ -1,5 +1,6 @@
 @import 'alert.css';
 @import 'button.css';
+@import 'card.css';
 @import 'dropdown.css';
 @import 'links.css';
 @import 'table.css';
