--- a/resources/css/components/index.css
+++ b/resources/css/components/index.css
@@ -2,6 +2,7 @@
 @import 'button.css';
 @import 'card.css';
 @import 'dropdown.css';
+@import 'modal.css';
 @import 'links.css';
 @import 'table.css';
 @import 'tooltip.css';
