--- a/resources/css/components/card.css
+++ b/resources/css/components/card.css
@@ -5,3 +5,7 @@
 .card .card-header + .card-body .table thead tr:first-child th {
     @apply bg-gray-100;
 }
+
+.card .info-list-item:last-child {
+    @apply lg:rounded-b-lg;
+}
