--- a/resources/css/components/index.css
+++ b/resources/css/components/index.css
@@ -3,8 +3,11 @@
 @import 'card.css';
 @import 'dropdown.css';
 @import 'feeds.css';
+@import 'forms.css';
+@import 'kbd.css';
 @import 'modal.css';
 @import 'links.css';
 @import 'lists.css';
 @import 'table.css';
 @import 'tooltip.css';
+@import 'topbar.css';
