--- a/resources/css/components/topbar.css
+++ b/resources/css/components/topbar.css
@@ -1,7 +1,9 @@
-.topbar-section {
-    @apply px-2 py-2 first:pl-0 last:pr-0
-}
+@layer components {
+    .topbar-section {
+        @apply px-2 py-2 first:pl-0 last:pr-0
+    }
 
-.topbar-section + .topbar-section {
-    @apply pl-0;
+    .topbar-section + .topbar-section {
+        @apply pl-0;
+    }
 }
