--- a/resources/css/components/alert.css
+++ b/resources/css/components/alert.css
@@ -1,11 +1,13 @@
-.alert-text {
-    @apply text-sm leading-5 font-medium;
-}
+@layer components {
+    .alert-text {
+        @apply text-sm leading-5 font-medium;
+    }
 
-.alert-title + .alert-text {
-    @apply font-normal;
-}
+    .alert-title + .alert-text {
+        @apply font-normal;
+    }
 
-.alert-text a {
-    @apply font-medium underline transition focus:outline-blue-gray;
+    .alert-text a {
+        @apply font-medium underline transition focus:outline-slate;
+    }
 }
