--- a/resources/css/components/forms.css
+++ b/resources/css/components/forms.css
@@ -1,36 +1,42 @@
-.dark-inputs .form-text,
-.dark-inputs .form-select {
-    @apply bg-blue-gray-600 border-blue-gray-500 placeholder-cool-gray-400 text-cool-gray-200;
-}
+@layer components {
+    .dark-inputs .form-text,
+    .dark-inputs .form-select {
+        @apply bg-slate-600 border-slate-500 placeholder-gray-400 text-gray-200;
+    }
 
-.dark-inputs .custom-select__button {
-    @apply bg-blue-gray-600 border-blue-gray-500 text-cool-gray-200;
-}
+    .dark-inputs .custom-select__button,
+    .dark-inputs .tree-select__button {
+        @apply bg-slate-600 border-slate-500 text-gray-200;
+    }
 
-.dark-inputs .custom-select__menu-container {
-    @apply bg-blue-gray-600;
-}
+    .dark-inputs .custom-select-menu,
+    .dark-inputs .tree-select-menu {
+        @apply bg-slate-600;
+    }
 
-.dark-inputs .custom-select__option--selected {
-    @apply bg-blue-gray-400;
-}
+    .dark-inputs .custom-select-option.selected,
+    .dark-inputs .tree-select-option.selected {
+        @apply bg-slate-400;
+    }
 
-.dark-inputs .custom-select__option--hovered {
-    @apply bg-blue-gray-700;
-}
+    .dark-inputs .custom-select-option.has-focus,
+    .dark-inputs .tree-select-option.has-focus {
+        @apply bg-slate-700;
+    }
 
-.dark-inputs .custom-select__placeholder {
-    @apply text-cool-gray-400;
-}
+    /*.dark-inputs .custom-select__placeholder {*/
+    /*    @apply text-gray-400;*/
+    /*}*/
 
-.dark-inputs .custom-select-clear {
-    @apply text-cool-gray-200 hover:text-cool-gray-400;
-}
+    .dark-inputs .custom-select-clear {
+        @apply text-gray-200 hover:text-gray-400;
+    }
 
-.dark-inputs .leading-addon {
-    @apply bg-blue-gray-700 border-blue-gray-500;
-}
+    .dark-inputs .leading-addon {
+        @apply bg-slate-700 border-slate-500;
+    }
 
-.dark-inputs .form-label {
-    @apply text-cool-gray-300;
+    .dark-inputs .form-label {
+        @apply text-gray-300;
+    }
 }
