--- a/resources/css/components/table.css
+++ b/resources/css/components/table.css
@@ -1,22 +1,24 @@
-.table-check {
-    width: 1%;
-    justify-content: flex-start;
-}
+@layer components {
+    .table-check {
+        width: 1%;
+        justify-content: flex-start;
+    }
 
-td.table-check {
-    @apply pr-0;
-}
+    td.table-check {
+        @apply pr-0;
+    }
 
-td.table-actions {
-    @apply px-0 text-left whitespace-nowrap;
-    width: 1%;
-}
+    td.table-actions {
+        @apply px-0 text-left whitespace-nowrap;
+        width: 1%;
+    }
 
-.table-actions > [x-data] {
-    @apply -ml-3;
-}
+    .table-actions > [x-data] {
+        @apply -ml-3;
+    }
 
-.table-actions + td,
-.table-actions + th {
-    @apply pl-0;
+    .table-actions + td,
+    .table-actions + th {
+        @apply pl-0;
+    }
 }
