--- a/resources/css/utils/app.css
+++ b/resources/css/utils/app.css
@@ -1,11 +1,19 @@
-* {
-    @apply relative box-border;
-}
+@layer utilities {
+    * {
+        @apply relative box-border;
+    }
 
-[x-cloak] {
-    display: none;
-}
+    [x-cloak] {
+        display: none;
+    }
 
-.content-container {
-    @apply px-4 sm:px-6 md:px-8 lg:px-0
+    .content-container {
+        @apply px-4 sm:px-6 md:px-8 lg:px-0
+    }
+
+    .outline-slate,
+    .outline-blue-gray {
+        outline: 2px dotted theme('colors.slate.400');
+        outline-offset: 2px;
+    }
 }
