--- a/resources/css/components/forms.css
+++ b/resources/css/components/forms.css
@@ -19,6 +19,11 @@
         @apply bg-slate-400;
     }
 
+    .dark-inputs .custom-select-option__container,
+    .dark-inputs .tree-select-option__container {
+        @apply text-gray-200;
+    }
+
     .dark-inputs .custom-select-option.has-focus,
     .dark-inputs .tree-select-option.has-focus {
         @apply bg-slate-700;
