--- a/resources/css/components/index.css
+++ b/resources/css/components/index.css
@@ -1,8 +1,8 @@
+@import 'variables.css';
 @import 'alert.css';
 @import 'card.css';
 @import 'dropdown.css';
 @import 'feeds.css';
-@import 'forms.css';
 @import 'kbd.css';
 @import 'modal.css';
 @import 'lists.css';
